2006-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Add `_AM_DEPENDENCIES(OBJC)'
	to `AC_PROG_OBJC' if provided, to fix Objective C depmode
	handling.
	* lib/Automake/Variable.pm (%_ac_macro_for_var): Add entries for
	OBJC and OBJCFLAGS.
	* tests/ext.test: Adjust.
	* tests/objc.test, tests/objc2.test: New tests.
	* tests/Makefile.am: Adjust.
	* doc/automake.texi (Objective C Support): New node.
	(Support for Other Languages): Adjust.
	* NEWS: Update.

2006-03-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/RuleDef.pm (DESCRIPTION): Typo.

	* tests/depcomp6.test, tests/depcomp7.test: Fix failure logic
	to work with `set -e'.

	* tests/depcomp6.test, tests/depcomp7.test: New tests,
	for general `depcomp' functionality, with and without
	`subdir-objects', with and without `libtool'.
	* tests/Makefile.am: Adjust.

	* aclocal.in (write_aclocal): Unlink `aclocal.m4' before
	writing into it, to break a symlinked file.
	* tests/acloca20.test: New test.
	* tests/Makefile.am: Updated.

2006-03-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Allow package trees (packages with subpackages) to share
	common distributed auxiliary files (and directories) that
	reside within a subpackage.

	* lib/am/distdir.am (distdir %?TOPDIR_P%): Do not fail if
	`$(distdir)' already exists.
	(%?SUBDIRS%): Set `am__remove_distdir' to `:' to prevent
	removal of subpackage trees for distribution.
	* tests/subpkg3.test: New test.
	* tests/Makefile.am: Update.

2006-03-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/check5.test, tests/nobast.test: Fix $MAKE and rm
	invocations to please maintainer-check.

2006-03-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (lang_c_rewrite): Typo in previous change.
	* tests/ccnoco2.test: New file.
	* tests/Makefile.am (TESTS): Add ccnoco2.test.

	* automake.in (lang_c_rewrite): Make the AM_PROG_CC_C_O requirement
	a 'portability' warning, so that people can ignore it.  Suggested
	by Ralf Wildenhues.
