@@ -42,6 +42,7 @@ Bruno Haible		haible@ilog.fr
 Charles Wilson		cwilson@ece.gatech.edu
 Chris Provenzano	proven@io.proven.org
 Christian Cornelssen	ccorn@cs.tu-berlin.de
+Clifford Wolf		clifford@clifford.at
 Dalibor Topic		robilad@kaffe.org
 danbp			danpb@nospam.postmaster.co.uk
 Daniel Jacobowitz	drow@false.org
