@@ -942,7 +942,10 @@ sub parse_arguments ()
 	      # strip off newlines and end-of-line comments
 	      s/\s*\#.*$//;
 	      chomp;
-	      push (@system_includes, $_) if -d $_;
+	      foreach my $dir (glob)
+		{
+		  push (@system_includes, $dir) if -d $dir;
+		}
 	    }
 	  close (DIRLIST);
 	}
