@@ -1860,9 +1860,10 @@ Any extra directories specified using @option{-I} options
 
 There is a third mechanism for customizing the search path.  If a
 @file{dirlist} file exists in @var{acdir}, then that file is assumed to
-contain a list of directories, one per line, to be added to the search
-list.  These directories are searched @emph{after} all other
-directories.
+contain a list of directory patterns, one per line.  @command{aclocal}
+expands these patterns to directory names, and adds them to the search
+list @emph{after} all other directories.  @file{dirlist} entries may
+use shell wildcards such as @samp{*}, @samp{?}, or @code{[...]}.
 
 For example, suppose
 @file{@var{acdir}/dirlist} contains the following:
@@ -1870,6 +1871,7 @@ For example, suppose
 @example
 /test1
 /test2
+/test3*
 @end example
 
 @noindent
@@ -1885,6 +1887,9 @@ Then, the search path would be
 @item @code{/test1}
 @item @code{/test2}
 @end enumerate
+
+@noindent
+and all directories with path names starting with @code{/test3}.
 
 If the @option{--acdir=@var{dir}} option is used, then @command{aclocal}
 will search for the @file{dirlist} file in @var{dir}.  In the
