@@ -101,6 +101,9 @@ New in 1.9a:
   - Improved support for Objective C:
     - Autoconf's new AC_PROG_OBJC will enable automatic dependency tracking.
     - A new section of the manual documents the support.
+
+  - `dirlist' entries (for the aclocal search path) may use shell wildcards
+    such as `*', `?', or `[...]'.
 
 New in 1.9:
 
