@@ -1,3 +1,14 @@
+2006-03-21  Clifford Wolf  <clifford@clifford.at>  (tiny change)
+	    Stepan Kasal  <kasal@ucw.cz>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* aclocal.in (parse_arguments): Added wildcard support to the
+	dirlist parser.
+	* doc/automake.texi (Macro search path): Document it.
+	* tests/dirlist2.test: New test.
+	* m4/dirlist, tests/Makefile.am: Adjust.
+	* NEWS, THANKS: Update.
+
 2006-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/init.m4 (AM_INIT_AUTOMAKE): Add `_AM_DEPENDENCIES(OBJC)'
